# gcoordinator-lite

./: README.md  pyproject.toml  test.py
.github/workflows/: release.yml
gcoordinator/: __init__.py  gcode_generator.py  gui_export.py  infill_generator.py  path_generator.py  settings.py
gcoordinator/kinematics/: kin_bed_rotate.py  kin_bed_tilt_bc.py  kin_cartesian.py  kin_nozzle_tilt.py
gcoordinator/utils/: contour.py  polygon.py
