[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gcoordinator"
version = "0.0.1"
authors = [
  { name="Tomohiro TANIGUCHI", email="gcoordinator.3dp@gmail.com" },
  { name="e04", email="47185462+e04@users.noreply.github.com" },
]
description = "a package for generate G-code for 3D Printer"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy"]


[project.urls]
"Homepage" = "https://github.com/e04/gcoordinator"
